# is-emoji

./: Cargo.toml  README.md
src/: main.rs
